<resources>
    <string name="app_name">Android Demos</string>
    <string name="action_setting">Settings</string>
    <string name="action_about">About</string>

    <!-- ENTRANCES BY CATEGORIES -->
    <string name="app_title">Learning Android</string>
    <string name="entry_basics">Basics Learning</string>
    <string name="entry_demos">Demos Learning</string>

    <!-- ENTRANCES FOR BASICS -->
    <string name="app_basics_learning">Android Basics Learning</string>
    <string name="entry_launch_modes">Launch Modes</string>
    <string name="entry_activity_themes">Different Themes</string>
    <string name="entry_multi_drawables">Multi-drawables</string>

    <!-- ENTRANCES FOR DEMOS -->
    <string name="app_demos_learning">Android Demos Learning</string>
    <string name="entry_text_share">Text Sharing</string>
    <string name="entry_apps_center">Apps Center</string>
    <string name="entry_selectable_grid_view">Selectable GridView</string>
    <string name="entry_loadable_list_view">Loadable ListView</string>
    <string name="entry_float_window">Float Window</string>
    <string name="entry_memos">Memos</string>

    <!-- VALUES FOR APP: ACTIVITIES IN DIFFERENT LAUNCH MODES -->
    <string name="app_launch_modes">Discovery of Different Launch Modes</string>
    <string name="title_activity_act_1">Activity One (standard)</string>
    <string name="title_activity_act_2">Activity Two (singleTop)</string>
    <string name="title_activity_act_3">Activity Three (singleTask)</string>
    <string name="title_activity_act_4">Activity Four (singleInstance)</string>
    <string name="button_to_activity_one">To Activity One (standard)</string>
    <string name="button_to_activity_two">To Activity Two (singleTop)</string>
    <string name="button_to_activity_three">To Activity Three (singleTask)</string>
    <string name="button_to_activity_four">To Activity Four (singleInstance)</string>
    <string name="button_show_activity_id">Show Activity ID</string>

    <!-- VALUES FOR APP: ACTIVITY FOR DIFFERENT THEMES -->
    <string name="title_activity_themes_page">Activity Theme Page</string>
    <string name="button_theme_light_action_bar">To Light.ActionBar</string>
    <string name="button_theme_dark_action_bar">To Dark.ActionBar</string>
    <string name="button_theme_full_no_action_bar">To FullScreen</string>
    <string name="button_theme_no_action_bar">To NoActionBar</string>

    <!-- VALUES FOR APP: MULTIPLE DRAWABLES PAGE -->
    <string name="title_activity_multi_drawables_page">Multi-drawables Page</string>
    <string name="view_color_by_xml">Set text color by using XML. </string>
    <string name="view_color_by_coding">Set text color by coding. </string>
    <string name="view_shape_by_xml">Draw the shape by using XML. </string>
    <string name="view_shape_by_shape_drawable">Draw the shape by using Class ShapeDrawable. </string>
    <string name="view_indicator_text">Test Text</string>
    <string name="view_indicator_shape">Test Shape Drawing</string>

    <!-- VALUES FOR APP: SHARING TEXT -->
    <string name="title_activity_text_sharing">Text Sharing Page</string>
    <string name="title_show_sharing_contents">Contents to be shared:</string>
    <string name="title_enter_sharing_contents">Entering block:</string>
    <string name="button_show_sharing_text">Show Text</string>
    <string name="notification_empty_input">Empty input</string>
    <string name="notification_empty_sharing">Empty sharing</string>
    <string name="title_shared_target">Share it to: </string>

    <!-- VALUES FOR APP: MZ APPS CENTER DEMO -->
    <string name="title_activity_apps_center">Apps Center</string>
    <string name="title_fragment_main">Apps Center</string>
    <string name="title_fragment_category">Category</string>
    <string name="title_fragment_search">Search</string>
    <string name="title_fragment_profile">Profile</string>
    <string name="content_main">1. Main Page</string>
    <string name="content_category">2. Category Page</string>
    <string name="content_search">3. Search Page</string>
    <string name="content_profile">4. Profile Page</string>
    <string name="title_fragment_choice">Choice</string>
    <string name="title_fragment_ranking">Rank</string>
    <string name="title_fragment_new">New</string>
    <string name="title_fragment_topics">Topics</string>
    <string name="content_choice">Page #1\nChoice</string>
    <string name="content_ranking">Page #2\nRanking</string>
    <string name="content_new">Page #3\nNew</string>
    <string name="content_topics">Page $3\nTopics</string>
    <string name="button_choice_confirm">Confirm</string>
    <string name="item_choice_title">App Title</string>
    <string name="item_choice_type">App Type</string>
    <string name="item_choice_recommend">Recommend</string>
    <string name="item_choice_more">More</string>

    <!-- VALUES FOR APP: SELECTABLE GRID VIEW -->
    <string name="title_activity_selectable_grid_view">Selectable GridView</string>
    <string name="grid_position">Grid Pos</string>
    <string name="grid_position_clicked">Position</string>
    <string name="menu_select_all">All</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_select_count">%s selected</string>

    <!-- VALUES FOR APP: LOADABLE LIST VIEW -->
    <string name="title_activity_loadable_list_view">Loadable ListView</string>
    <string name="status_pull_up_to_load">Pull up to load more. </string>
    <string name="status_release_to_load">Release to load more. </string>
    <string name="status_loading">Loading…</string>

    <!-- VALUES FOR APP: FLOAT WINDOW -->
    <string name="title_activity_float_window">Create Float Window</string>
    <string name="float_window_start">Start Flow Window</string>
    <string name="float_window_close">Close Flow Window</string>
    <string name="float_window_text">Float Window</string>
    <string name="float_window_hint">This Window</string>

    <!-- VALUES FOR APP: MEMOS -->
    <string name="title_activity_memos_list">Memos</string>
    <string name="title_activity_new_memo">New Memo</string>
    <string name="button_new_memo">+ New Memo</string>
    <string name="button_cancel_edit_memo">Cancel</string>
    <string name="title_memo_title">Title: </string>
    <string name="title_memo_content">Content: </string>
    <string name="hint_memo_title">Type the title here. </string>
    <string name="hint_memo_content">Enter the content here. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
