<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DemosEntryActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_demos_learning"
            android:textStyle="bold" />
        <Button
            android:id="@+id/button_entry_text_sharing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/entry_button_margin"
            android:text="@string/entry_text_share" />
        <Button
            android:id="@+id/button_entry_apps_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/entry_button_margin"
            android:text="@string/entry_apps_center" />
        <Button
            android:id="@+id/button_entry_selectable_grid_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/entry_button_margin"
            android:text="@string/entry_selectable_grid_view" />
        <Button
            android:id="@+id/button_entry_loadable_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/entry_button_margin"
            android:text="@string/entry_loadable_list_view" />
        <Button
            android:id="@+id/button_entry_float_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/entry_button_margin"
            android:text="@string/entry_float_window" />
        <Button
            android:id="@+id/button_entry_memos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/entry_button_margin"
            android:text="@string/entry_memos" />
    </LinearLayout>
</ScrollView>
