<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hku.demos.aohuijun.androiddemos.DemosEntryPage" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_demos_learning"
            android:textStyle="bold" />
        <Button
            android:id="@+id/button_entry_launch_modes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/entry_button_margin"
            android:text="@string/entry_launch_modes" />
        <Button
            android:id="@+id/button_entry_activity_themes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/entry_button_margin"
            android:text="@string/entry_activity_themes" />
        <Button
            android:id="@+id/button_entry_multi_drawables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/entry_button_margin"
            android:text="@string/entry_multi_drawables" />
    </LinearLayout>
</ScrollView>
