<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tab_choice"
            android:layout_width="@dimen/apps_center_action_bar_main_tab_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_fragment_choice"
            android:textColor="@color/color_black"
            android:clickable="true" />
        <TextView
            android:id="@+id/tab_ranking"
            android:layout_width="@dimen/apps_center_action_bar_main_tab_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_fragment_ranking"
            android:textColor="@color/color_black"
            android:clickable="true" />
        <TextView
            android:id="@+id/tab_new"
            android:layout_width="@dimen/apps_center_action_bar_main_tab_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_fragment_new"
            android:textColor="@color/color_black"
            android:clickable="true" />
        <TextView
            android:id="@+id/tab_topics"
            android:layout_width="@dimen/apps_center_action_bar_main_tab_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_fragment_topics"
            android:textColor="@color/color_black"
            android:clickable="true" />
    </LinearLayout>
    <ImageView
        android:id="@+id/apps_center_scroll_bar"
        android:layout_width="@dimen/apps_center_action_bar_main_tab_width"
        android:layout_height="wrap_content"
        android:background="@drawable/view_pager_scroll"
        android:layout_alignParentBottom="true" />
</RelativeLayout>