<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.hku.demos.aohuijun.androiddemos.textsharing.TextSharingPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sharing_text_item_margin"
        android:text="@string/title_show_sharing_contents" />
    <TextView
        android:id="@+id/shared_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sharing_text_item_margin"
        android:longClickable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sharing_text_item_margin"
        android:text="@string/title_enter_sharing_contents" />
    <EditText
        android:id="@+id/shared_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLines="5" />

    <Button
        android:id="@+id/shared_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_show_sharing_text"
        android:textStyle="bold" />
</LinearLayout>
